<resources>
    <string name="app_name">Gallery</string>

    <!--Preference Strings-->
    <string name="prefs_show_hidden">preference_show_hidden</string>
    <string name="prefs_theme" >prefs_theme</string>
    <string name="prefs_grid_column">prefs_grid_column</string>

    <string name="settings">Settings</string>
    <string name="show_hidden">Show Hidden</string>
    <string name="storage_permission_needed">Storage permission is needed for the app to work</string>
    <string name="sort_by_name">By Name</string>
    <string name="sort">Sort</string>
    <string name="sort_by_date">By Date</string>
    <string name="cut">Cut</string>
    <string name="share">Share</string>
    <string name="copy">Copy</string>
    <string name="delete">Delete</string>
    <string name="info">Info</string>
    <string name="theme">Theme</string>
    <string name="appearance">Appearance</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="black">Black</string>
    <string name="other">Other</string>
    <string name="share_via">Share via</string>
    <string name="no_apps_found">No apps found</string>
    <string name="edit">edit</string>
    <string name="details">Details</string>
    <string name="okay">Okay</string>
    <string name="grid_column">Grid column</string>


</resources>
