<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/appearance">
        <ListPreference
            android:title="@string/theme"
            android:key="@string/prefs_theme"
            android:entries="@array/theme_array"
            android:entryValues="@array/theme_array_values"
            app:iconSpaceReserved="false"/>

        <!--suppress AndroidElementNotAllowed -->
        <com.tejasbhitle.gallery.preference.ColumnDialogPreference
            android:key="prefs_grid_column"
            android:title="Grid column size"
            android:summary="2"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/other">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/prefs_show_hidden"
            android:title="@string/show_hidden"
            app:iconSpaceReserved="false"/>

    </PreferenceCategory>

</PreferenceScreen>